--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,4 +17,4 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        pylint $(git ls-files '*.py') --disable=C --max-line-length=120 --disable=R0913,R0914
