--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,20 +1,27 @@
 name: Pylint
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.11.5
-      uses: actions/setup-python@v3
-      with:
-        python-version: 3.11.5
-    - name: Install dependencies
+    - name: Set up Miniconda
       run: |
-        python -m pip install --upgrade pip
-        pip install pylint
-    - name: Analysing the code with pylint
+        MINICONDA_URL="https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh"
+        curl -o miniconda.sh $MINICONDA_URL
+        bash miniconda.sh -b -p $HOME/miniconda
+        source "$HOME/miniconda/etc/profile.d/conda.sh"
+        conda init bash
+    - name: Create and activate Conda environment
+      run: |
+        conda create -n myenv python=3.11.5
+        conda activate myenv
+        pip install -r requirements.txt
+    - name: Run pylint
       run: |
         pylint $(git ls-files '*.py') --disable=C --max-line-length=120 --disable=R0913,R0914
