--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -15,12 +15,11 @@ jobs:
         MINICONDA_URL="https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh"
         curl -o miniconda.sh $MINICONDA_URL
         bash miniconda.sh -b -p $HOME/miniconda
-        source "$HOME/miniconda/etc/profile.d/conda.sh"
-        conda init bash
+        export PATH="$HOME/miniconda/bin:$PATH"
     - name: Create and activate Conda environment
       run: |
         conda create -n myenv python=3.11.5
-        conda activate myenv
+        source activate myenv
         pip install -r requirements.txt
     - name: Run pylint
       run: |
