--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,13 +19,12 @@ jobs:
         curl -o miniconda.sh $MINICONDA_URL
         bash miniconda.sh -b -p $HOME/miniconda
         export PATH="$HOME/miniconda/bin:$PATH"
-        echo ". $HOME/miniconda/etc/profile.d/conda.sh" >> $HOME/.bashrc
-        echo "conda activate" >> $HOME/.bashrc
+        conda init bash
+        source $HOME/miniconda/etc/profile.d/conda.sh
     - name: Create and activate Conda environment
       run: |
         conda create -n myenv python=3.11.5
-        conda init zsh
-        conda activate myenv
+        source activate myenv
         pip install -r requirements.txt
     - name: Run pylint
       run: |
