--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -13,18 +13,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Miniconda
+     - name: Set up Miniconda
       run: |
         MINICONDA_URL="https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh"
         curl -o miniconda.sh $MINICONDA_URL
         bash miniconda.sh -b -p $HOME/miniconda
         export PATH="$HOME/miniconda/bin:$PATH"
+        echo ". $HOME/miniconda/etc/profile.d/conda.sh" >> $HOME/.bashrc
         conda init bash
-        source $HOME/miniconda/etc/profile.d/conda.sh
     - name: Create and activate Conda environment
       run: |
         conda create -n myenv python=3.11.5
-        source activate myenv
+        echo "conda activate myenv" >> $HOME/.bashrc
+        source $HOME/.bashrc
         pip install -r requirements.txt
     - name: Run pylint
       run: |
