--- a/requirements.txt
+++ b/requirements.txt
@@ -1,133 +1,136 @@
-aiofiles @ file:///C:/b/abs_9ex6mi6b56/croot/aiofiles_1683773603390/work
-aiosqlite @ file:///C:/b/abs_9djc_0pyi3/croot/aiosqlite_1683773915844/work
-anyio @ file:///C:/ci_311/anyio_1676425491996/work/dist
-argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
-argon2-cffi-bindings @ file:///C:/ci_311/argon2-cffi-bindings_1676424443321/work
-astroid @ file:///C:/ci_311/astroid_1678740610167/work
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
-attrs @ file:///C:/b/abs_35n0jusce8/croot/attrs_1695717880170/work
-Babel @ file:///C:/ci_311/babel_1676427169844/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-beautifulsoup4 @ file:///C:/b/abs_0agyz1wsr4/croot/beautifulsoup4-split_1681493048687/work
-black @ file:///C:/b/abs_620t6ndje8/croot/black_1680737261963/work
-bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
-Bottleneck @ file:///C:/ci_311/bottleneck_1676500016583/work
-Brotli @ file:///C:/ci_311/brotli-split_1676435766766/work
-certifi @ file:///C:/b/abs_91u83siphd/croot/certifi_1700501720658/work/certifi
-cffi @ file:///C:/ci_311/cffi_1676423759166/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-click @ file:///C:/b/abs_f9ihnt72pu/croot/click_1698129847492/work
-colorama @ file:///C:/ci_311/colorama_1676422310965/work
-comm @ file:///C:/ci_311/comm_1678376562840/work
-contourpy @ file:///C:/ci_311/contourpy_1676431756017/work
-cryptography @ file:///C:/b/abs_f4do8t8jfs/croot/cryptography_1694444424531/work
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
-debugpy @ file:///C:/b/abs_c0y1fjipt2/croot/debugpy_1690906864587/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-dill @ file:///C:/b/abs_084unuus3z/croot/dill_1692271268687/work
-entrypoints @ file:///C:/ci_311/entrypoints_1676423328987/work
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
-fastjsonschema @ file:///C:/ci_311/python-fastjsonschema_1679500568724/work
-flake8 @ file:///C:/ci_311/flake8_1678376624746/work
+aiofiles==22.1.0
+aiosqlite==0.18.0
+anyio==3.5.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+astroid==2.14.2
+asttokens==2.0.5
+attrs==23.1.0
+Babel==2.11.0
+backcall==0.2.0
+beautifulsoup4==4.12.2
+black==0.0
+bleach==4.1.0
+Bottleneck==1.3.5
+Brotli==1.0.9
+certifi==2023.11.17
+cffi==1.15.1
+charset-normalizer==2.0.4
+click==8.1.7
+colorama==0.4.6
+comm==0.1.2
+contourpy==1.0.5
+cryptography==41.0.3
+cycler==0.11.0
+debugpy==1.6.7
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.7
+entrypoints==0.4
+executing==0.8.3
+fastjsonschema==2.16.2
+flake8==6.0.0
 fonttools==4.25.0
-idna @ file:///C:/ci_311/idna_1676424932545/work
-ipykernel @ file:///C:/b/abs_07rkft_vaz/croot/ipykernel_1691121700587/work
-ipython @ file:///C:/b/abs_e5729i179y/croot/ipython_1694181400005/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-isort @ file:///tmp/build/80754af9/isort_1628603791788/work
-jedi @ file:///C:/ci_311/jedi_1679427407646/work
-Jinja2 @ file:///C:/ci_311/jinja2_1676424968965/work
-json5 @ file:///tmp/build/80754af9/json5_1624432770122/work
-jsonschema @ file:///C:/b/abs_d1c4sm8drk/croot/jsonschema_1699041668863/work
-jsonschema-specifications @ file:///C:/b/abs_0brvm6vryw/croot/jsonschema-specifications_1699032417323/work
-jupyter-events @ file:///C:/b/abs_4cak_28ewz/croot/jupyter_events_1684268050893/work
-jupyter-server @ file:///C:/ci_311/jupyter_server_1678228762759/work
-jupyter-ydoc @ file:///C:/b/abs_e7m6nh5lao/croot/jupyter_ydoc_1683747253535/work
-jupyter_client @ file:///C:/ci_311/jupyter_client_1676424009414/work
-jupyter_core @ file:///C:/b/abs_c769pbqg9b/croot/jupyter_core_1698937367513/work
-jupyter_server_fileid @ file:///C:/b/abs_f1yjnmiq_6/croot/jupyter_server_fileid_1684273602142/work
-jupyter_server_ydoc @ file:///C:/b/abs_8ai39bligw/croot/jupyter_server_ydoc_1686767445888/work
-jupyterlab @ file:///C:/b/abs_c1msr8zz3y/croot/jupyterlab_1686179674844/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab_server @ file:///C:/b/abs_e0qqsihjvl/croot/jupyterlab_server_1680792526136/work
-kiwisolver @ file:///C:/ci_311/kiwisolver_1676431979301/work
-lazy-object-proxy @ file:///C:/ci_311/lazy-object-proxy_1676432050939/work
-MarkupSafe @ file:///C:/ci_311/markupsafe_1676424152318/work
-matplotlib @ file:///C:/b/abs_e26vnvd5s1/croot/matplotlib-suite_1698692153288/work
-matplotlib-inline @ file:///C:/ci_311/matplotlib-inline_1676425798036/work
-mccabe @ file:///opt/conda/conda-bld/mccabe_1644221741721/work
-mistune @ file:///C:/ci_311/mistune_1676425111783/work
-mkl-fft @ file:///C:/b/abs_19i1y8ykas/croot/mkl_fft_1695058226480/work
-mkl-random @ file:///C:/b/abs_edwkj1_o69/croot/mkl_random_1695059866750/work
+idna==3.4
+ipykernel==6.25.0
+ipython==8.15.0
+ipython-genutils==0.2.0
+isort==5.9.3
+jedi==0.18.1
+Jinja2==3.1.2
+json5==0.9.6
+jsonschema==4.19.2
+jsonschema-specifications==2023.7.1
+jupyter_client==7.4.9
+jupyter_core==5.5.0
+jupyter-events==0.6.3
+jupyter-server==1.23.4
+jupyter_server_fileid==0.9.0
+jupyter_server_ydoc==0.8.0
+jupyter-ydoc==0.2.4
+jupyterlab==3.6.3
+jupyterlab-pygments==0.1.2
+jupyterlab_server==2.22.0
+kiwisolver==1.4.4
+lazy-object-proxy==1.6.0
+MarkupSafe==2.1.1
+matplotlib==3.8.0
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+mistune==2.0.4
+mkl-fft==1.3.8
+mkl-random==1.2.4
 mkl-service==2.4.0
 munkres==1.1.4
-mypy-extensions @ file:///C:/b/abs_8f7xiidjya/croot/mypy_extensions_1695131051147/work
-nbclassic @ file:///C:/b/abs_c8_rs7b3zw/croot/nbclassic_1681756186106/work
-nbclient @ file:///C:/b/abs_cal0q5fyju/croot/nbclient_1698934263135/work
-nbconvert @ file:///C:/b/abs_17p29f_rx4/croot/nbconvert_1699022793097/work
-nbformat @ file:///C:/b/abs_5a2nea1iu2/croot/nbformat_1694616866197/work
-nest-asyncio @ file:///C:/ci_311/nest-asyncio_1676423519896/work
-nose @ file:///home/conda/feedstock_root/build_artifacts/nose_1602434998960/work
-notebook @ file:///C:/b/abs_e2qn6c85jb/croot/notebook_1690985290943/work
-notebook_shim @ file:///C:/ci_311/notebook-shim_1678144850856/work
-numexpr @ file:///C:/b/abs_5fucrty5dc/croot/numexpr_1696515448831/work
-numpy @ file:///C:/b/abs_9fu2cs2527/croot/numpy_and_numpy_base_1695830496596/work/dist/numpy-1.26.0-cp311-cp311-win_amd64.whl#sha256=ebb3a554edce1131a5b1b0d4afa8f980929b1226bebc4eb515ac2e29b44186d2
-packaging @ file:///C:/b/abs_28t5mcoltc/croot/packaging_1693575224052/work
-pandas @ file:///C:/b/abs_81b3npjrl8/croot/pandas_1697477219064/work/dist/pandas-2.1.1-cp311-cp311-win_amd64.whl#sha256=1732f3b07ba52119320a2b01aa09f2627f6258176e492b728daf60efb4f4d78e
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pathspec @ file:///C:/ci_311/pathspec_1679427644142/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow @ file:///C:/b/abs_20ztcm8lgk/croot/pillow_1696580089746/work
-platformdirs @ file:///C:/b/abs_b6z_yqw_ii/croot/platformdirs_1692205479426/work
+mypy-extensions==1.0.0
+nbclassic==0.5.5
+nbclient==0.8.0
+nbconvert==7.10.0
+nbformat==5.9.2
+nest-asyncio==1.5.6
+nose==1.3.7
+notebook==6.5.4
+notebook_shim==0.2.2
+numexpr==2.8.7
+numpy==1.26.0
+packaging==23.1
+pandas==2.1.1
+pandocfilters==1.5.0
+parso==0.8.3
+pathspec==0.10.3
+pickleshare==0.7.5
+Pillow==10.0.1
+pip==23.3
+platformdirs==3.10.0
 ply==3.11
-prometheus-client @ file:///C:/ci_311/prometheus_client_1679591942558/work
-prompt-toolkit @ file:///C:/ci_311/prompt-toolkit_1676425940920/work
-psutil @ file:///C:/ci_311_rebuilds/psutil_1679005906571/work
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
+prometheus-client==0.14.1
+prompt-toolkit==3.0.36
+psutil==5.9.0
+pure-eval==0.2.2
 pybase64==1.3.1
-pycodestyle @ file:///C:/ci_311/pycodestyle_1678376707834/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pyflakes @ file:///C:/ci_311/pyflakes_1678402101687/work
-Pygments @ file:///C:/b/abs_fay9dpq4n_/croot/pygments_1684279990574/work
-pylint @ file:///C:/ci_311/pylint_1678740302984/work
-pyOpenSSL @ file:///C:/b/abs_08f38zyck4/croot/pyopenssl_1690225407403/work
-pyparsing @ file:///C:/ci_311/pyparsing_1678721386713/work
+pycodestyle==2.10.0
+pycparser==2.21
+pyflakes==3.0.1
+Pygments==2.15.1
+pylint==2.16.2
+pyOpenSSL==23.2.0
+pyparsing==3.0.9
 PyQt5==5.15.10
-PyQt5-sip @ file:///C:/b/abs_c0pi2mimq3/croot/pyqt-split_1698769125270/work/pyqt_sip
-PySocks @ file:///C:/ci_311/pysocks_1676425991111/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-python-json-logger @ file:///C:/b/abs_cblnsm6puj/croot/python-json-logger_1683824130469/work
-pytz @ file:///C:/b/abs_19q3ljkez4/croot/pytz_1695131651401/work
+PyQt5-sip==12.13.0
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2023.3.post1
 pywin32==305.1
-pywinpty @ file:///C:/ci_311/pywinpty_1677707791185/work/target/wheels/pywinpty-2.0.10-cp311-none-win_amd64.whl
-PyYAML @ file:///C:/b/abs_782o3mbw7z/croot/pyyaml_1698096085010/work
-pyzmq @ file:///C:/ci_311/pyzmq_1676423601304/work
-referencing @ file:///C:/b/abs_09f4hj6adf/croot/referencing_1699012097448/work
-requests @ file:///C:/b/abs_316c2inijk/croot/requests_1690400295842/work
-rfc3339-validator @ file:///C:/b/abs_ddfmseb_vm/croot/rfc3339-validator_1683077054906/work
-rfc3986-validator @ file:///C:/b/abs_6e9azihr8o/croot/rfc3986-validator_1683059049737/work
-rpds-py @ file:///C:/b/abs_76j4g4la23/croot/rpds-py_1698947348047/work
-seaborn @ file:///C:/ci_311/seaborn_1676446547861/work
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
-sip @ file:///C:/b/abs_edevan3fce/croot/sip_1698675983372/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-sniffio @ file:///C:/ci_311/sniffio_1676425339093/work
-soupsieve @ file:///C:/b/abs_bbsvy9t4pl/croot/soupsieve_1696347611357/work
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
-terminado @ file:///C:/ci_311/terminado_1678228513830/work
-tinycss2 @ file:///C:/ci_311/tinycss2_1676425376744/work
-tomlkit @ file:///C:/ci_311/tomlkit_1676425418821/work
-tornado @ file:///C:/b/abs_0cbrstidzg/croot/tornado_1696937003724/work
-traitlets @ file:///C:/ci_311/traitlets_1676423290727/work
-typing_extensions @ file:///C:/b/abs_213vg2cd1l/croot/typing_extensions_1690297804941/work
-tzdata @ file:///croot/python-tzdata_1690578112552/work
-urllib3 @ file:///C:/b/abs_9cmlsrm3ys/croot/urllib3_1698257595508/work
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+pywinpty==2.0.10
+PyYAML==6.0.1
+pyzmq==23.2.0
+referencing==0.30.2
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.10.6
+seaborn==0.12.2
+Send2Trash==1.8.0
+setuptools==68.0.0
+sip==6.7.12
+six==1.16.0
+sniffio==1.2.0
+soupsieve==2.5
+stack-data==0.2.0
+terminado==0.17.1
+tinycss2==1.2.1
+tomlkit==0.11.1
+tornado==6.3.3
+traitlets==5.7.1
+typing_extensions==4.7.1
+tzdata==2023.3
+urllib3==1.26.18
+wcwidth==0.2.5
 webencodings==0.5.1
-websocket-client @ file:///C:/ci_311/websocket-client_1676426063281/work
-win-inet-pton @ file:///C:/ci_311/win_inet_pton_1676425458225/work
-wrapt @ file:///C:/ci_311/wrapt_1676432805090/work
-y-py @ file:///C:/b/abs_b7f5go6r0j/croot/y-py_1683662173571/work
-ypy-websocket @ file:///C:/b/abs_4e65ywlnv8/croot/ypy-websocket_1684172103529/work
+websocket-client==0.58.0
+wheel==0.41.2
+win-inet-pton==1.1.0
+wrapt==1.14.1
+y-py==0.5.9
+ypy-websocket==0.8.2
