--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -15,9 +15,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Set python path for pylint
+    - name: Set pythonpath
       run: |
-        echo: "::add-path::$(python -m site --user-base)/bin"
+        echo "PYTHONPATH=home/runner/work/real-estate-madrid" >> $GITHUB_ENV
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py') --disable=C --max-line-length=120 --disable=R0913,R0914
