--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -13,7 +13,8 @@ jobs:
         python-version: 3.11.5
     - name: Set pythonpath
       run: |
-        echo "PYTHONPATH=$ {{ github.workspace }}" >> $GITHUB_ENV
+        echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV
+        echo ${{ github.workspace }}
     - name: Print pythonpath
       run: |
         echo "PYTHONPATH IS $PYTHONPATH"
