--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,7 @@ jsonschema==4.19.2
 jsonschema-specifications==2023.7.1
 jupyter_client==7.4.9
 jupyter_core==5.5.0
-jupyter-events==0.6.3
+jupyter-events
 jupyter-server==2.11.2
 jupyter_server_fileid==0.9.0
 jupyter_server_ydoc==0.8.0
