--- a/requirements.txt
+++ b/requirements.txt
@@ -105,7 +105,7 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.10.6
 seaborn==0.12.2
-Send2Trash==1.8.0
+Send2Trash>=1.8.0
 setuptools==68.0.0
 sip==6.7.12
 six==1.16.0
