--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ Babel==2.11.0
 backcall==0.2.0
 beautifulsoup4==4.12.2
 bleach==4.1.0
-boto3
-botocore
+boto3==1.29.1
+botocore==1.32.1
 Bottleneck==1.3.5
 Brotli==1.0.9
 certifi==2023.11.17
