--- a/requirements.txt
+++ b/requirements.txt
@@ -60,7 +60,7 @@ matplotlib==3.8.0
 matplotlib-inline==0.1.6
 mccabe==0.7.0
 mistune==2.0.4
-mkl-fft==1.3.8
+mkl-fft
 mkl-random==1.2.4
 mkl-service==2.4.0
 munkres==1.1.4
