--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        ${{ env.pythonLocation }}\python.exe -m pip install --upgrade pip
+        ${{ env.pythonLocation }}\python.exe -m pip install -r requirements.txt
 
     - name: Set pythonpath
       run: |
