--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ Babel==2.11.0
 backcall==0.2.0
 beautifulsoup4==4.12.2
 bleach==4.1.0
+boto3==1.29.1
+botocore==1.32.1
 Bottleneck==1.3.5
 Brotli==1.0.9
 certifi==2023.11.17
@@ -37,12 +39,13 @@ ipython-genutils==0.2.0
 isort==5.9.3
 jedi==0.18.1
 Jinja2==3.1.3
+jmespath==1.0.1
 json5==0.9.6
 jsonschema==4.19.2
 jsonschema-specifications==2023.7.1
 jupyter_client==7.4.9
 jupyter_core==5.5.0
-jupyter-events
+jupyter-events>=0.6.3
 jupyter-server==2.11.2
 jupyter_server_fileid==0.9.0
 jupyter_server_ydoc==0.8.0
@@ -89,6 +92,7 @@ pycparser==2.21
 pyflakes==3.0.1
 Pygments==2.15.1
 pylint==2.16.2
+pyOpenSSL>=23.2.0
 pyparsing==3.0.9
 PyQt5==5.15.10
 PyQt5-sip==12.13.0
@@ -96,6 +100,8 @@ PySocks==1.7.1
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.3.post1
+pywin32>=305
+pywinpty==2.0.10
 PyYAML==6.0.1
 pyzmq>=20
 referencing==0.30.2
@@ -103,6 +109,7 @@ requests==2.31.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.10.6
+s3transfer==0.7.0
 seaborn==0.12.2
 Send2Trash>=1.8.0
 setuptools==68.0.0
