--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,6 +17,10 @@ jobs:
       run: |
         echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV
         echo "PYTHONPATH is set to ${{ github.workspace }}"
+
+    - name: Print pythonpath
+      run: |
+        echo "PYTHONPATH IS $PYTHONPATH"
         
     - name: Install dependencies
       run: |
